Updated Swordion with theoretical improvements based on my APDC project experiences

--- a/assets/sass/00-config/fonts/font-families.scss
+++ b/assets/sass/00-config/fonts/font-families.scss
@@ -1,7 +1,8 @@
 ﻿
 // Base font families
-$sans-serif:        Arial, Helvetica, sans-serif;
+$sans-serif:        Arial, sans-serif;
 $serif:             Times New Roman, Times, serif;
 
 // Project fonts
-$roboto:        'Roboto', $sans-serif;
+$lato: 'Lato', $sans-serif;
+$oswald: 'Oswald', $sans-serif;
