--- a/assets/sass/output-files/style.scss
+++ b/assets/sass/output-files/style.scss
@@ -16,4 +16,7 @@ $lt-ie9: false;
 //If set to true, css rules in the config and mixins folders (like the icon class names for example) will be outputted to the css. If set to false, it assumes that those classes have already been stated previously in the main style sheet so it will ignore them when compiling the css.
 $main-sheet: true;
 
+//all global variables go in the files listed in here
+@import "../import-maps/map-config.scss";
+
 @import "../01-import-styles.scss";
