--- a/assets/sass/00-config/fonts/@font-face.scss
+++ b/assets/sass/00-config/fonts/@font-face.scss
@@ -1,14 +1,19 @@
 ﻿
 @if ($main-sheet == true){
 
+
+//Google fonts import
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic,900|Oswald:400,700);
+
+
 //Loads the icon font
 @font-face {
 	font-family: 'icons';
-	src:url('../fonts/icons.eot?-nx4lre');
-	src:url('../fonts/icons.eot?#iefix-nx4lre') format('embedded-opentype'),
-		url('../fonts/icons.woff?-nx4lre') format('woff'),
-		url('../fonts/icons.ttf?-nx4lre') format('truetype'),
-		url('../fonts/icons.svg?-nx4lre#icons') format('svg');
+	src:url('../fonts/icon-font/icons.eot?-nx4lre');
+	src:url('../fonts/icon-font/icons.eot?#iefix-nx4lre') format('embedded-opentype'),
+		url('../fonts/icon-font/icons.woff?-nx4lre') format('woff'),
+		url('../fonts/icon-font/icons.ttf?-nx4lre') format('truetype'),
+		url('../fonts/icon-font/icons.svg?-nx4lre#icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
