--- a/assets/sass/04-base/form-elements/browse-btn.scss
+++ b/assets/sass/04-base/form-elements/browse-btn.scss
@@ -18,8 +18,8 @@ input[type="file"] {
 			margin-right: 10px;
 			padding: 7px 40px;
 			border: 1px solid #000;
-			&.error { color: $red-dark; background-color: $red-light; }
-			&.error:hover { background-color: $red-light--hover; }
+			&.error { color: $CB-red-dark; background-color: $CB-red-light; }
+			&.error:hover { background-color: $CB-red-light--hover; }
 		}
 		input {
 			position: absolute;
