--- a/assets/sass/04-base/structure/containers.scss
+++ b/assets/sass/04-base/structure/containers.scss
@@ -2,7 +2,9 @@
 //A div that wraps around the entire site
 .siteContainer {
 	overflow: hidden; //prevents unwanted horizontal scroll bar caused by .columns--gutter-# classes
+	background-color: $CG-bodyBG;
+	position: relative;
 }
 
 //The styling for the central box that holds the whole page content
-.pageWidth { margin:0 auto; max-width:bp('page'); }
+.width--page { margin:0 auto; max-width:bp('page'); }
