--- a/assets/sass/04-base/form-elements/checkboxes-radios.scss
+++ b/assets/sass/04-base/form-elements/checkboxes-radios.scss
@@ -41,12 +41,18 @@ $C-checkbox-bg--hover: $CB-grey-light;
 				left: 0px;
 			}
 			//foreground
-			@include M-icon('checkmark', $C-checkbox-check, 10px, $pos: after){
+			&:after {
+				background-color: $C-checkbox-check;
+				@include M-size(9px);
+				top: 5px;
+				left: 3px;
+			}
+			/*@include M-icon('checkmark', $C-checkbox-check, 10px, $pos: after){
 				opacity: 0;
 				left: 3px;
 				top: 5px;
 				background: transparent;
-			};
+			};*/
 		}
 
 		&:focus + label, & + label:hover {
