--- a/assets/sass/04-base/form-elements/checkboxes-radios.scss
+++ b/assets/sass/04-base/form-elements/checkboxes-radios.scss
@@ -46,6 +46,7 @@ $C-checkbox-bg--hover: $CB-grey-light;
 				@include M-size(9px);
 				top: 5px;
 				left: 3px;
+				opacity: 0;
 			}
 			/*@include M-icon('checkmark', $C-checkbox-check, 10px, $pos: after){
 				opacity: 0;
@@ -96,9 +97,9 @@ $C-checkbox-bg--hover: $CB-grey-light;
 			//foreground
 			&:after {
 				content: '';
-				@include M-size(9px);
-				left: 3px;
-				top: 5px;
+				//@include M-size(9px);
+				//left: 3px;
+				//top: 5px;
 				background-color: $C-checkbox-check;
 				opacity: 0;
 			}
