--- a/assets/sass/00-config/01-colors/colors--global.scss
+++ b/assets/sass/00-config/01-colors/colors--global.scss
@@ -27,7 +27,7 @@ $CG-error-border: $CG-error-text;
 
 
 $CG-input: $CB-grey-dark;
-$CG-input--placeholder: $CB-grey-dim;
+$CG-input--placeholder: #767676;//#767676 is the lightest possible grey against a white bg that passes AA for small text
 $CG-input-focus: $CB-grey-pale;
 $CG-input-border: $CG-border--primary;
 
