added -webkit- prefix to animation fill mode

--- a/assets/sass/05-modules/lightbox-remodal.scss
+++ b/assets/sass/05-modules/lightbox-remodal.scss
@@ -116,6 +116,7 @@
    ========================================================================== */
 
 %fill-forwards {
+	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
 }
 
