lightbox wrapper gets 10px padding all around

--- a/assets/sass/05-modules/lightbox-remodal.scss
+++ b/assets/sass/05-modules/lightbox-remodal.scss
@@ -153,7 +153,7 @@
 
 /* Default theme styles of the wrapper */
 	&-wrapper {
-		padding: 10px 10px 0;
+		padding: 10px;
 	}
 	&, &-wrapper:after {
 		vertical-align: middle;
