--- a/assets/sass/05-modules/lightbox-remodal.scss
+++ b/assets/sass/05-modules/lightbox-remodal.scss
@@ -125,7 +125,7 @@
 	&.remodal-is-opening {
 		animation: remodal-opening-keyframes 0.3s;
 	}
-	.remodal-is-closing {
+	&.remodal-is-closing {
 		animation: remodal-closing-keyframes 0.3s;
 	}
 
