Fix bug with lightbox not appearing

--- a/assets/sass/03-plugins/remodal.scss
+++ b/assets/sass/03-plugins/remodal.scss
@@ -78,5 +78,5 @@ html.remodal-is-locked {
 
 .remodal-is-initialized {
   /* Disable Anti-FOUC */
-  display: inline-block;
+  display: inline-block!important;
 }
