--- a/assets/sass/02-mixins/08-animation-core.scss
+++ b/assets/sass/02-mixins/08-animation-core.scss
@@ -11,7 +11,7 @@
 %M-3d { @include M-3d; }
 
 //basic animation
-@mixin M-animate($settings: 0.2s, $ease: ease-in-out, $var: all, $style: flat){
+@mixin M-animate($settings: 0.2s, $ease: ease-in-out, $var: all, $fill: both, $style: flat){
 	@if ($settings == 'fast'){
 		$settings: 0.2s;
 	} @else if ($settings == 'medium'){
@@ -20,16 +20,17 @@
 		$settings: 1s;
 	}
 	@include M-gt-ie8 {
+		//allows $var to take multiple arguments
 		$rule: ();
 		@each $variable in $var {
-			$values: $variable $settings $ease;
+			$values: $variable $settings $ease $fill;
 			$rule: append($rule, $values, 'comma');
 		}
 
 	    -webkit-transition: $rule;
 	    transition: $rule;
 
-		@if ($style == 3D){
+		@if ($style == '3D'){
 			@include M-3d;
 		}
 	}
@@ -72,14 +73,16 @@
 //analyses the animation set and generates the css rules for each key frame
 @mixin M-kf-animation-loop ($animation_set){
 	@include M-gt-ie8 {
-		@for $frame from 1 through length($animation_set) {
-			$keyframe: nth(nth($animation_set,$frame),2);
-			$css: nth(nth($animation_set,$frame),1);
+
+		//can be useful for debugging
+		//@debug $animation_set;
+
+		@each $frame in $animation_set {
+			$keyframe: nth($frame,1);
+			$css: nth($frame,2);
 
 		 	#{$keyframe} {
-				@for $rule from 1 through length($css) {
-					$attribute: nth(nth($css, $rule),1);
-					$value: nth(nth($css, $rule),2);
+		 		@each $attribute, $value in $css {
 					@if ($attribute == rotate){
 						@include M-rotate($value);
 					} @else if ($attribute == 3D-rotate){
@@ -89,9 +92,9 @@
 					} @else {
 						#{$attribute} : $value;
 					}
-				}
+		 		}
 			}
-	    }
+		}
 	}
 };
 
@@ -114,19 +117,19 @@
 //Defines how the animation plays out
 //use this on it's own to call on animations made with the kf-definition mixin
 //This mixin allows you to use the same animation set as another element but give different timings
-@mixin M-kf-predefined($animation_name, $settings: 1s, $loops: infinite, $ease: linear){
+@mixin M-kf-predefined($animation_name, $settings: 1s, $loops: infinite, $ease: linear, $fill: both){
 	@include M-gt-ie8 {
-		-webkit-animation: $animation_name $settings $loops $ease; //* Safari 4+ */
-		animation:         $animation_name $settings $loops $ease; //* IE 10+, Fx 29+ */
+		-webkit-animation: $animation_name $settings $loops $ease $fill; //* Safari 4+ */
+		animation:         $animation_name $settings $loops $ease $fill; //* IE 10+, Fx 29+ */
 
 	}
 }
 
 //Ties all the key-frame animation mixins together into a single easy to use mixin
-@mixin M-kf-animate($animation_name, $animation_set, $settings: 1s, $loops: infinite, $ease: linear) {
+@mixin M-kf-animate($animation_name, $animation_set, $settings: 1s, $loops: infinite, $ease: linear, $fill: both) {
 	@include M-gt-ie8 {
 		@include M-kf-definition($animation_name, $animation_set);
-		@include M-kf-predefined($animation_name, $settings, $loops, $ease);
+		@include M-kf-predefined($animation_name, $settings, $loops, $ease, $fill);
 	}
 }
 
@@ -134,18 +137,18 @@
 //EXAMPLE USAGE:
 
 //$example_animation:
-//	(
-//		(margin, 10px 20px),
-//		(opacity, 0)
-//	) 0%,
-//	(
-//		(margin, 0),
-//		(opacity, 1)
-//	) 50%,
-//	(
-//		(margin, 10px 20px),
-//		(opacity, 0)
-//	) 100%
+//	0% (
+//		scale: 0,
+//		opacity: 0
+//	),
+//	80% (
+//		scale: 1,
+//		opacity: 1
+//	),
+//	100% (
+//		scale: 0,
+//		opacity: 0
+//	)
 //;
 
 //#element {
@@ -159,27 +162,27 @@
 
 //calculates the percentages for the key frame generator
 @function keyframe_percent($index, $attribute_list){
-	@return (100% / length($attribute_list)) * $index;
+	@return (100% / (length($attribute_list) - 1)) * ($index - 1);
+	//@return (100% / 2)) * 1;
 }
 
 //generates evenly spaced key frames for an animation set
 @function kf_generator($animation_set){
-	$animation:	((nth($animation_set, 1)), 0%),;
 
-	@for $i from 1 through (length($animation_set)) {
-		$animation_keyframe:
-			(
-				//adds the attributes to the keyframe
-				(nth($animation_set, $i)),
+	$animation:	(0% (nth($animation_set, 1))),;
 
-				//determines at what point in the animation the attributes take effect
-				(keyframe_percent(($i),$animation_set))
-			)
-		;
+	@for $i from 2 through (length($animation_set)) {
+			$animation_keyframe:
+					///*determines at what point in the animation the attributes take effect*/
+				(keyframe_percent($i, $animation_set)
 
-		$animation: append($animation, $animation_keyframe, comma);
+				///*adds the attributes to the keyframe*/
+				nth($animation_set, $i))
+			;
+
+			$animation: append($animation, $animation_keyframe, comma);
 	}
-	//@debug $animation; //uncomment if having issues with the generator
+	//@debug $animation; //uncomment if having issues with the generator*/
 	@return ($animation);
 }
 
@@ -189,9 +192,9 @@
 //(sorry about the ugliness but it works)
 
 //$example_animation:
-//	((top, 0px),),
-//	((top, -5px),),
-//	((top, 0px),),
+//	(scale: 0, opacity: 0),
+//	(scale: 1, opacity: 1),
+//	(scale: 0, opacity: 0)
 //;
 
 //#element {
@@ -202,27 +205,3 @@
 //		);
 //}
 
-//-----------------------------
-
-//EXAMPLE USAGE (multi attribute):
-
-//$example_animation:
-//	(
-//		(top, 0px),
-//		(left, 0px)
-//	),(
-//		(top, -5px),
-//		(left, -5px)
-//	),(
-//		(top, 0px),
-//		(left, 0px)
-//	)
-//;
-
-//#element {
-//		@include M-kf-animate(
-//			example_animation,
-//			kf_generator($example_animation),
-//			10s
-//		);
-//}
